# converge

./: .gitignore  .kitsune2_bootstrap_srv  Cargo.toml  README.md  flake.nix  flake.nix.backup  package-lock.json  package.json  pnpm-lock.yaml
dnas/converge/workdir/: dna.yaml
dnas/converge/zomes/coordinator/converge/: Cargo.toml
dnas/converge/zomes/coordinator/converge/src/: all_criteria.rs  all_deliberations.rs  all_outcomes.rs  all_proposals.rs  all_viewed.rs  criterion.rs  criterion_comment.rs  criterion_to_criteria.rs  criterion_to_criterion_comments.rs  deliberation.rs  deliberation_to_criteria.rs  deliberation_to_outcomes.rs  deliberation_to_proposals.rs  deliberator_to_deliberations.rs  lib.rs  objector_to_criteria.rs  outcome.rs  proposal.rs  proposal_to_criteria.rs  proposal_to_evaluators.rs  proposal_to_outcomes.rs  settings.rs  supporter_to_criteria.rs  utils.rs  viewed.rs
tests/src/converge/converge/: all-criteria.test.ts  all-criterion-comments.test.ts  all-deliberations.test.ts  all-proposals.test.ts  all-viewed.test.ts  common.ts  criterion-comment.test.ts  criterion-to-criteria.test.ts  criterion-to-criterion-comments.test.ts  criterion.test.ts  deliberation-to-criteria.test.ts  deliberation-to-proposals.test.ts  deliberation.test.ts  deliberator-to-deliberations.test.ts  objector-to-criteria.test.ts  proposal-to-criteria.test.ts  proposal-to-evaluators.test.ts  proposal-to-outcomes.test.ts  proposal.test.ts  settings.test.ts  supporter-to-criteria.test.ts  viewed.test.ts
ui/: package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  AttachmentsBind.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Instructions.svelte  NetworkInfo.svelte  SvgIcon.svelte  app.css  contexts.ts  dcan.css  main.ts  profilesStore.js  publish.ts  refetch.ts  store.js  svgIcons.ts  util.ts  viewed.ts  we.ts
ui/src/converge/converge/: .CriteriaForCriterion.svelte  .CriteriaForDeliberation.svelte  .CriteriaForObjector.svelte  .CriteriaForSupporter.svelte  .DeliberationsForCriterion.svelte  AllCriteria.svelte  AllDeliberations.svelte  AllProposals.svelte  AllViewed.svelte  Alternative.svelte  Avatar.svelte  CreateAlternative.svelte  CreateCriterion.svelte  CreateCriterionComment.svelte  CreateDeliberation.svelte  CreateProposal.svelte  (+30 more)
we_dev/: config.json  config.ts
weave/: .gitignore  config.json  config.ts
workdir/: happ.yaml  web-happ.yaml
(+53 files in other folders)
