[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

resolver = "2"

[workspace.dependencies]
hdi = "0.3.1"
hdk = "0.2.1"
serde = "1"

[workspace.dependencies.converge]
path = "dnas/converge/zomes/coordinator/converge"

[workspace.dependencies.converge_integrity]
path = "dnas/converge/zomes/integrity/converge"

[workspace.dependencies.profiles]
path = "dnas/converge/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/converge/zomes/integrity/profiles"
