[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.30"
hdk = "0.3.0-beta-dev.34"
serde = "1"

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }

[workspace.dependencies.converge]
path = "dnas/converge/zomes/coordinator/converge"

[workspace.dependencies.converge_integrity]
path = "dnas/converge/zomes/integrity/converge"

[workspace.dependencies.profiles]
path = "dnas/converge/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/converge/zomes/integrity/profiles"
