[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

resolver = "2"

[workspace.dependencies]
hdi = "0.5.0-dev.5"
hdk = "0.4.0-dev.5"
serde = "1"

[workspace.dependencies.converge]
path = "dnas/converge/zomes/coordinator/converge"

[workspace.dependencies.converge_integrity]
path = "dnas/converge/zomes/integrity/converge"

[workspace.dependencies.profiles]
path = "dnas/converge/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/converge/zomes/integrity/profiles"
