[package]
name = "converge"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "converge"

[dependencies]
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }
hc_zome_profiles_integrity = "0.1.0"

serde = { workspace = true }

converge_integrity = { workspace = true } 
